--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -51,10 +51,9 @@
     <div class="mr-body">
         <div class="mr-comment">
             <div class="mrc-header">
-                <div class="mrc-user">
-                    <img src="/images/users/user_no_photo_300x300.png">
-                    <span class="mrc-username">MrBombastic</span>
-                </div>
+                <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+                <span class="mrc-username">MrBombastic</span>
+                <span class="mrc-date">26/09/2022</span>
                 <div class="mrc-menu">
                     <i class="bi bi-three-dots"></i>
                 </div>
@@ -73,6 +72,11 @@
         </div>
 
         <div class="mr-reply">
+            <div class="mrr-header">
+                <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+                <span class="mrr-username">MrBombastic</span>
+                <span class="mrr-date">26/09/2022</span>
+            </div>
             <div class="mrr-text">
                 <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
             </div>
@@ -83,17 +87,19 @@
                     <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn"></i>
                     <a href="#" class="mrr-replybtn">Reply</a>
                 </div>
-                <div class="mrr-user">
-                    <span class="mrr-username">MrBombastic</span>
-                    <img src="/images/users/user_no_photo_300x300.png">
-                    <div class="mrr-menu">
-                        <i class="bi bi-three-dots"></i>
-                    </div>
+                <div class="mrr-menu">
+                    <i class="bi bi-three-dots"></i>
                 </div>
             </div>
         </div>
+
         
         <div class="mr-reply">
+            <div class="mrr-header">
+                <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+                <span class="mrr-username">MrBombastic</span>
+                <span class="mrr-date">26/09/2022</span>
+            </div>
             <div class="mrr-text">
                 <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
             </div>
@@ -104,15 +110,38 @@
                     <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn"></i>
                     <a href="#" class="mrr-replybtn">Reply</a>
                 </div>
-                <div class="mrr-user">
-                    <span class="mrr-username">MrBombastic</span>
-                    <img src="/images/users/user_no_photo_300x300.png">
-                    <div class="mrr-menu">
-                        <i class="bi bi-three-dots"></i>
-                    </div>
+                <div class="mrr-menu">
+                    <i class="bi bi-three-dots"></i>
                 </div>
             </div>
         </div>
+
+
+        <div class="mr-reply">
+            <div class="mrr-header">
+                <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+                <span class="mrr-username">MrBombastic</span>
+                <span class="mrr-date">26/09/2022</span>
+            </div>
+            <div class="mrr-text">
+                <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
+            </div>
+            <div class="mrr-footer">
+                <div class="mrr-evaluation">
+                    <i class="bi bi-hand-thumbs-up mrr-likebtn likebtn"></i>
+                    <span class="mrr-likes">5465</span>
+                    <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn"></i>
+                    <a href="#" class="mrr-replybtn">Reply</a>
+                </div>
+                <div class="mrr-menu">
+                    <i class="bi bi-three-dots"></i>
+                </div>
+            </div>
+        </div>
+
+
+
+
     </div>
 </div>
 
@@ -121,7 +150,8 @@
         <div class="p-body">
             @if(post.coverImage != null){
                 <div class="p-cover">
-                    <img src="/images/covers/@post.coverImage" class="p-basecover">
+                    <img src="/images/covers/@post.coverImage" class="p-basecover" 
+                        onerror="this.onerror=null; this.closest('.p-cover').remove()">
                     <img src="/images/covers/@post.coverImage" class="p-megacover">
                 </div>
             }
@@ -167,7 +197,7 @@
                         <span class="p-username p-deleted_user">DeletedUser</span>
                     }
                     <div class="p-uimg-cont">
-                        <img src="@userPicture">
+                        <img src="/images/users/@userPicture" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
                     </div>
                 </div>
             </div>
@@ -236,7 +266,7 @@
         <textarea placeholder="This is where we comment."></textarea>
         <div class="ac-footer">
             <div class="ac-user">
-                <img src="@userPicture">
+                <img src="/images/users/@userPicture" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
                 <span class="ac-username">@username</span>
             </div>
             <a href="#" class="comment-btn">Send</a>
@@ -245,13 +275,21 @@
 }
 
 <div class="comments">
+<!--
+    foreach (PostModel.Comment comment in post.comments)
+    {
     <div class="comment-cont">
-        <div class="comment" id="comment-1">
+        <div class="comment" id="comment-comment.id">
             <div class="c-header">
-                <div class="c-user">
-                    <img src="/images/users/user_no_photo_300x300.png">
-                    <span class="c-username">MrBombastic</span>
-                </div>
+                <img src="/images/users/user_no_photo_300x300.png">
+                <span class="c-username">
+                    if(comment.account.displayName != null) {
+                        comment.account.displayName
+                    } else {
+                        comment.account.username
+                    }
+                </span>
+                <span class="c-date">comment.publishDate.Date.ToShortDateString()</span>
                 <div class="c-menu">
                     <i class="bi bi-three-dots"></i>
                 </div>
@@ -261,23 +299,30 @@
                 </ul>
             </div>
             <div class="c-text">
-                <span>This is a comment right here. This is a comment right here. This is a comment right here. This is a comment right here.</span>
+                <span>comment.body</span>
             </div>
             <div class="c-footer">
                 <div class="c-evaluation">
                     <i class="bi bi-hand-thumbs-up c-likebtn likebtn"></i>
-                    <span class="c-likes">5465</span>
+                    <span class="c-likes">
+                        {
+                            if(comment.voteResult >= 0)
+                                comment.voteResult
+                            else
+                                Html.Raw("--")
+                        }
+                    </span>
                     <i class="bi bi-hand-thumbs-down c-dislikebtn dislikebtn"></i>
                     <a href="#" class="c-replybtn">Reply</a>
                 </div>
                 <div class="get_replies">
-                    <span>4 replies</span>
+                    <span>comment.replies.Count replies</span>
                 </div>
             </div>
         </div>
         <div class="reply">
             <div class="r-text">
-                <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
+                <span>Elle girilmiş yanıt.</span>
             </div>
             <div class="r-footer">
                 <div class="r-evaluation">
@@ -293,6 +338,6 @@
             </div>
         </div>
     </div>
-
-
+    }
+-->
 </div>
