get highlighted reply version 1

--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -274,7 +274,7 @@
     </div>
 }
 
-<div class="comments">
+<div class="comments" id="comment-section">
 <!--
     foreach (PostModel.Comment comment in post.comments)
     {
