fetch replies of comment

--- a/OmneFictio.Web/Views/Reading/Post.cshtml
+++ b/OmneFictio.Web/Views/Reading/Post.cshtml
@@ -47,7 +47,7 @@
                 </ul>
             </div>
             <div class="c-text">
-                <span class="c-body">
+                <span>
                     
                 </span>
             </div>
@@ -87,6 +87,68 @@
     </div>
 </template>
 
+<template id="repliesModal-comment">
+    <div class="mr-comment">
+        <div class="mrc-header">
+            <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+            <span class="mrc-username">
+                
+            </span>
+            <span class="mrc-date">
+                
+            </span>
+            <div class="mrc-menu">
+                <i class="bi bi-three-dots"></i>
+            </div>
+        </div>
+        <div class="mrc-text">
+            <span>
+                
+            </span>
+        </div>
+        <div class="mrc-footer">
+            <div class="mrc-evaluation">
+                <i class="bi bi-hand-thumbs-up mrc-likebtn likebtn"></i>
+                <span class="mrc-likes">
+                    
+                </span>
+                <i class="bi bi-hand-thumbs-down mrc-dislikebtn dislikebtn"></i>
+                <a href="#" class="mrc-replybtn">Reply</a>
+            </div>
+        </div>
+    </div>
+</template>
+<template id="modalReplies-reply">
+    <div class="mr-reply">
+        <div class="mrr-header">
+            <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
+            <span class="mrr-username">
+                
+            </span>
+            <span class="mrr-date">
+                
+            </span>
+            <div class="mrr-menu">
+                <i class="bi bi-three-dots"></i>
+            </div>
+        </div>
+        <div class="mrr-text">
+            <span>
+                
+            </span>
+        </div>
+        <div class="mrr-footer">
+            <div class="mrr-evaluation">
+                <i class="bi bi-hand-thumbs-up mrr-likebtn likebtn"></i>
+                <span class="mrr-likes">
+                    
+                </span>
+                <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn"></i>
+                <a href="#" class="mrr-replybtn">Reply</a>
+            </div>
+        </div>
+    </div>
+</template>
 
 
 
@@ -143,6 +205,9 @@
                 <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
                 <span class="mrr-username">MrBombastic</span>
                 <span class="mrr-date">26/09/2022</span>
+                <div class="mrr-menu">
+                    <i class="bi bi-three-dots"></i>
+                </div>
             </div>
             <div class="mrr-text">
                 <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
@@ -153,55 +218,6 @@
                     <span class="mrr-likes">5465</span>
                     <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn"></i>
                     <a href="#" class="mrr-replybtn">Reply</a>
-                </div>
-                <div class="mrr-menu">
-                    <i class="bi bi-three-dots"></i>
-                </div>
-            </div>
-        </div>
-
-        
-        <div class="mr-reply">
-            <div class="mrr-header">
-                <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
-                <span class="mrr-username">MrBombastic</span>
-                <span class="mrr-date">26/09/2022</span>
-            </div>
-            <div class="mrr-text">
-                <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
-            </div>
-            <div class="mrr-footer">
-                <div class="mrr-evaluation">
-                    <i class="bi bi-hand-thumbs-up mrr-likebtn likebtn"></i>
-                    <span class="mrr-likes">5465</span>
-                    <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn"></i>
-                    <a href="#" class="mrr-replybtn">Reply</a>
-                </div>
-                <div class="mrr-menu">
-                    <i class="bi bi-three-dots"></i>
-                </div>
-            </div>
-        </div>
-
-
-        <div class="mr-reply">
-            <div class="mrr-header">
-                <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
-                <span class="mrr-username">MrBombastic</span>
-                <span class="mrr-date">26/09/2022</span>
-            </div>
-            <div class="mrr-text">
-                <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
-            </div>
-            <div class="mrr-footer">
-                <div class="mrr-evaluation">
-                    <i class="bi bi-hand-thumbs-up mrr-likebtn likebtn"></i>
-                    <span class="mrr-likes">5465</span>
-                    <i class="bi bi-hand-thumbs-down mrr-dislikebtn dislikebtn"></i>
-                    <a href="#" class="mrr-replybtn">Reply</a>
-                </div>
-                <div class="mrr-menu">
-                    <i class="bi bi-three-dots"></i>
                 </div>
             </div>
         </div>
