fetch highlighted reply final

--- a/OmneFictio.Web/Views/Reading/Post.cshtml
+++ b/OmneFictio.Web/Views/Reading/Post.cshtml
@@ -69,17 +69,23 @@
         </div>
         <div class="reply">
             <div class="r-text">
-                <span>Elle girilmiş yanıt.</span>
+                <span>
+
+                </span>
             </div>
             <div class="r-footer">
                 <div class="r-evaluation">
                     <i class="bi bi-hand-thumbs-up r-likebtn likebtn"></i>
-                    <span class="r-likes">5465</span>
+                    <span class="r-likes">
+                        
+                    </span>
                     <i class="bi bi-hand-thumbs-down r-dislikebtn dislikebtn"></i>
                     <span class="r-gotoreply">GO</span>
                 </div>
                 <div class="r-user">
-                    <span class="r-username">MrBombastic</span>
+                    <span class="r-username">
+                        
+                    </span>
                     <img src="/images/users/user_no_photo_300x300.png">
                 </div>
             </div>
@@ -87,7 +93,7 @@
     </div>
 </template>
 
-<template id="repliesModal-comment">
+<template id="modalReplies-comment">
     <div class="mr-comment">
         <div class="mrc-header">
             <img src="/images/users/user_no_photo_300x300.png" onerror="this.onerror=null; this.src='/images/onerror/user_no_photo_300x300.png'">
