--- a/OmneFictio.Web/Views/Home/Read.cshtml
+++ b/OmneFictio.Web/Views/Home/Read.cshtml
@@ -187,7 +187,7 @@
             <option value="7">Other</option>
         </select>
         <select>
-            <option value="AZ">A-Z</option>
+            <option value="0">A-Z</option>
             <option value="Others">Others</option>
             <option value="A">A</option>
             <option value="B">B</option>
