full size cover 2

--- a/OmneFictio.Web/Views/Reading/Post.cshtml
+++ b/OmneFictio.Web/Views/Reading/Post.cshtml
@@ -247,7 +247,10 @@
                 <div class="p-cover">
                     <img src="/images/covers/@post.coverImage" class="p-basecover" 
                         onerror="this.onerror=null; this.closest('.p-cover').remove()">
-                    <img src="/images/covers/@post.coverImage" class="p-upscalecover" id="p-upscalecover">
+                    <div class="p-upscalecover-cont" id="p-upscalecover">
+                        <img src="/images/covers/@post.coverImage" class="p-upscalecover">
+                        <i class="bi bi-zoom-in"></i>
+                    </div>
                 </div>
             }
             <div class="p-text">
