--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -33,24 +33,34 @@ main{
                     height: auto;
                     max-height: 370px;
                     border-radius: 4px;
-                    &:hover + .p-upscalecover{
+                    &:hover + .p-upscalecover-cont{
                         visibility: visible !important;
                     }
                 }
-                .p-upscalecover{
+                .p-upscalecover-cont{
                     position: absolute;
                     top: 0;
                     left: 0;
                     height: 100%;
                     width: 100%;
-                    border-radius: 8px;
                     visibility: hidden;
+                    cursor: pointer;
                     transition: all 0.1s ease;
                     z-index: 10;
-                    cursor: pointer;
+                    .p-upscalecover{
+                        height: 100%;
+                        width: 100%;
+                        border-radius: 8px;
+                        filter: grayscale(50%) brightness(60%);
+                    }
+                    i{
+                        position: absolute;
+                        bottom: 6px;
+                        right: 10px;
+                        font-size: 1.4rem;
+                        opacity: 0.7;
+                    }
                     &:hover{
-                        height: 150%;
-                        width: 150%;
                         visibility: visible;
                     }
                 }
@@ -901,6 +911,18 @@ main{
             padding: unset;
         }
     }
+
+    .p-upscalecover-cont{
+        &:hover{
+            height: 150% !important;
+            width: 150% !important;
+        }
+        i{
+            right: 14px !important;
+            font-size: 2rem !important;
+        }
+    }
+
     .chapter_selection{
         justify-content: space-evenly;
     }
